--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,5 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.type=trace
 
 # Adicionado para o Spring Boot V2
-spring.jpa.properties.hibernate.id.new_generator_mappings=false
-spring.flyway.enabled=false
+#spring.jpa.properties.hibernate.id.new_generator_mappings=false
+#spring.flyway.enabled=false
