Adicionado configurações do hibernate no application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,9 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.type=trace
+spring.jpa.properties.hibernate.hbm2ddl.auto=none
 
-# Adicionado para o Spring Boot V2
-#spring.jpa.properties.hibernate.id.new_generator_mappings=false
-#spring.flyway.enabled=false
+
+### Diferencas entre Spring Boot V1.5 e V2:
+### Spring Boot V2 devemos adicionar:
+spring.jpa.properties.hibernate.id.new_generator_mappings=false
