--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,19 +1,13 @@
-# MySQL
-#spring.jpa.hibernate.ddl-auto=nome
-#spring.datasource.url=jdbc:mysql://localhost:3306/ponto_inteligente
-#spring.datasource.username=root
-#spring.datasource.password=root
+### configura banco in memory H2
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+spring.datasource.username=sa
+spring.datasource.password=sa
 
-# Exibe os comandos SQL
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.use_sql_comments=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.type=trace
+### Desabilita Flyway migration
+### Spring 1.5 usar:
+flyway.enabled=false
 
-# Diferencas entre Spring Boot V1.5 e V2:
-
-### Spring Boot V1.5 usar:
-#flyway.enabled=false
-
-### Spring Boot V2
-spring.flyway.enabled=false
+### Spring 2
+#spring.flyway.enabled=false
