--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,18 @@
-# MySQL
-spring.jpa.hibernate.ddl-auto=nome
+### MySQL
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/ponto_inteligente
 spring.datasource.username=root
 spring.datasource.password=root
 
-# Exibe os comandos SQL
+
+### Exibe os comandos SQL
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.type=trace
-spring.jpa.properties.hibernate.hbm2ddl.auto=none
+#spring.jpa.properties.hibernate.hbm2ddl.auto=none
 
 
-### Diferencas entre Spring Boot V1.5 e V2:
-### Spring Boot V2 devemos adicionar:
-spring.jpa.properties.hibernate.id.new_generator_mappings=false
+### Diferencas entre Spring 1.5 e Spring 2:
+### Spring 2 devemos adicionar:
+#spring.jpa.properties.hibernate.id.new_generator_mappings=false
