--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,12 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.type=trace
-#spring.jpa.properties.hibernate.hbm2ddl.auto=none
 
+
+security.basic.enabled=false
+
+### pagiação
+paginacao.qtd_por_pagina=25
 
 ### Diferencas entre Spring 1.5 e Spring 2:
 ### Spring 2 devemos adicionar:
