--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+#spring.profiles.active=dev
+
 ### MySQL
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/ponto_inteligente
@@ -12,11 +14,16 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.type=trace
 
 
-security.basic.enabled=false
-
 ### pagiação
 paginacao.qtd_por_pagina=25
 
 ### Diferencas entre Spring 1.5 e Spring 2:
 ### Spring 2 devemos adicionar:
 #spring.jpa.properties.hibernate.id.new_generator_mappings=false
+
+#security.basic.enabled=false
+
+### JWT
+jwt.secret=_@HRL&L3tF?Z7ccj4z&L5!nU2B!Rjs3_
+### token com duração de 7 dias
+jwt.expiration=604800
